# qr-code-generator

./: .gitignore
QrCodeGen/: CMakeLists.txt  QrCodeGenerator.cpp  QrCoder.cpp  QrCoder.h  Types.h  consts.h
QrCodeGen/ContentFiller/: ContentFiller.cpp  ContentFiller.h
QrCodeGen/Controller/: Control.cpp  Control.h
QrCodeGen/Controller/Button/: ButtonControl.cpp  ButtonControl.h
QrCodeGen/Controller/Edit/: EditControl.cpp  EditControl.h
QrCodeGen/Controller/Qr/: QrControl.cpp  QrControl.h
QrCodeGen/Controller/RadioButton/: RadioButtonControl.cpp  RadioButtonControl.h
QrCodeGen/Encoding/: Encoder.cpp  Encoder.h
QrCodeGen/ErrorCorrection/: ErrorCorrection.cpp  ErrorCorrection.h
QrCodeGen/Utils/: Utils.cpp  Utils.h
